[taotao-cloud-project-1464] update[ springbootversion to 2.6.6 ]